--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
+    "@mui/lab": "^5.0.0-alpha.105",
     "@mui/material": "^5.10.8",
     "@mui/x-date-pickers": "^5.0.4",
     "@react-buddy/ide-toolbox": "^2.2.1",
@@ -15,9 +16,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.0.0",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-qr-code": "^2.0.8",
