--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.10.6",
+    "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.105",
     "@mui/material": "^5.10.8",
     "@mui/x-date-pickers": "^5.0.4",
     "@react-buddy/ide-toolbox": "^2.2.1",
-
-
-
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -30,6 +27,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
